Fixed gap issue for the main page (too much whitespace between supported browsers and end of the page)

--- a/web/styles/welcomeview/welcome.css
+++ b/web/styles/welcomeview/welcome.css
@@ -4,7 +4,6 @@
 	/* margin-left:13px; */
 	/* background:url(../images/info_bg.jpg) top left repeat-x; */
 	background: #ffffff;
-	min-height:250px;
 }
 
 /* headers for each of the 3 columns of the home page */
